Dark Mode Bug Fixing

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -18,6 +18,9 @@
 
     --color-active: 120, 86%, 25%;
     --color-completed: 0, 86%, 50%;
+
+    --color-input-bg: 0, 0%, 100%;
+    --color-input-text: 0, 0%, 0%;
 }
 body{
     width: 100vw;
@@ -41,6 +44,9 @@ body{
 
     --color-active: 120, 86%, 25%;
     --color-completed: 0, 86%, 50%;
+
+    --color-input-bg: 0, 0%, 21%;
+    --color-input-text: 0, 0%, 84%;
 }
 button{
     background-color: transparent;
@@ -436,8 +442,8 @@ input,textarea,select{
     width:75%;
     border: none;
     font-size: 1em;
-    background-color: hsl(var(--color-primary));
-    color: hsl(var(--color-text-primary));
+    background-color: hsl(var(--color-input-bg));
+    color: hsl(var(--color-input-text));
 }
 input[type='checkbox']{
     height: 70%;
